add debug prebuild
Signed-off-by: kiddlu <kidd.dawny.lu@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="権限の取得"
+        android:text="获取权限"
         app:layout_constraintBottom_toTopOf="@+id/activity_main_record_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="録音開始"
+        android:text="录音开始"
         app:layout_constraintBottom_toTopOf="@+id/activity_main_stop_button"
         app:layout_constraintEnd_toEndOf="@+id/activity_main_permission_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="録音を停止"
+        android:text="录音停止"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/activity_main_record_button"
         app:layout_constraintHorizontal_bias="0.5"
